--- a/Hollox.BlazorEcommerce.Client/Shared/MainLayout.razor
+++ b/Hollox.BlazorEcommerce.Client/Shared/MainLayout.razor
@@ -1,16 +1,19 @@
 ﻿@inherits LayoutComponentBase
 
+<PageTitle>Hollox.BlazorEcommerce</PageTitle>
+
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+	<div class="sidebar">
+		<NavMenu />
+	</div>
 
-    <main>
-        <div class="top-row px-4">
-        </div>
+	<main>
+		<div class="top-row px-4">
+			<a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+		</div>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+		<article class="content px-4">
+			@Body
+		</article>
+	</main>
 </div>
