feature: featch a static product list from a local api

--- a/Hollox.BlazorEcommerce.Client/Pages/Index.razor
+++ b/Hollox.BlazorEcommerce.Client/Pages/Index.razor
@@ -1,16 +1,5 @@
 ﻿@page "/"
-@page "/search/{searchText}/{page:int}"
-@page "/{categoryUrl}"
 
-<PageTitle>My Shop</PageTitle>
+<PageTitle>Hollox E-Commerce</PageTitle>
 
-@code {
-    [Parameter]
-    public string? CategoryUrl { get; set; } = null;
-
-    [Parameter]
-    public string? SearchText { get; set; } = null;
-
-    [Parameter]
-    public int Page { get; set; } = 1;
-}
+<ProductList />
