feature: implement Product page

--- a/Hollox.BlazorEcommerce.Client/Pages/ProductDetails.razor.css
+++ b/Hollox.BlazorEcommerce.Client/Pages/ProductDetails.razor.css
@@ -1,18 +1,13 @@
 ﻿.media-img {
-    max-height: 200px;
-    max-width: 200px;
-
+    max-height: 500px;
+    max-width: 500px;
     border-radius: 6px;
-    margin-bottom: 10px;
-    transition: transform .2s;
+    margin: 0 10px 10px 10px
 }
 
-.media-img:hover {
-    transform: scale(1.1);
-}
-
-.media-img-warapper {
-    width: 200px;
+.media-img-wrapper {
+    max-width: 500px;
+    max-height: 500px;
     text-align: center;
 }
 
