--- a/Hollox.BlazorEcommerce.Client/wwwroot/css/app.css
+++ b/Hollox.BlazorEcommerce.Client/wwwroot/css/app.css
@@ -75,3 +75,16 @@ a, .btn-link {
 .media-body {
     flex: 1;
 }
+
+.media {
+    display: flex;
+    align-items: flex-start;
+}
+
+.media-body {
+    flex: 1;
+}
+
+.price {
+    color: green;
+}
