--- a/Hollox.BlazorEcommerce.Client/Pages/Index.razor
+++ b/Hollox.BlazorEcommerce.Client/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
+@page "/{CategorySlug}"
 
 <PageTitle>Hollox E-Commerce</PageTitle>
 
-<ProductList />
+<ProductList CategorySlug="@CategorySlug" />
