--- a/Hollox.BlazorEcommerce.Client/Shared/NavMenu.razor
+++ b/Hollox.BlazorEcommerce.Client/Shared/NavMenu.razor
@@ -14,26 +14,13 @@
 				<span class="oi oi-home" aria-hidden="true"></span> Home
 			</NavLink>
 		</div>
-		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="counter">
-				<span class="oi oi-plus" aria-hidden="true"></span> Counter
-			</NavLink>
-		</div>
-		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="fetchdata">
-				<span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-			</NavLink>
-		</div>
+		@foreach (var category in Categories)
+		{
+			<div class="nav-item px-3">
+				<NavLink class="nav-link" href=@category.Slug>
+					@category.Name
+				</NavLink>
+			</div>
+		}
 	</nav>
 </div>
-
-@code {
-	private bool collapseNavMenu = true;
-
-	private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-	private void ToggleNavMenu()
-	{
-		collapseNavMenu = !collapseNavMenu;
-	}
-}
