--- a/Hollox.BlazorEcommerce.Client/Pages/ProductDetails.razor
+++ b/Hollox.BlazorEcommerce.Client/Pages/ProductDetails.razor
@@ -13,7 +13,7 @@ else
 		<div class="media-body">
 			<h2 class="mb-0">@Product.Title</h2>
 			<p>@Product.Description</p>
-			<h4 class="price">$@Product.Price</h4>
+			<h4 class="price">$</h4>
 		</div>
 	</div>
 }
