--- a/Hollox.BlazorEcommerce.Client/Shared/ProductList.razor
+++ b/Hollox.BlazorEcommerce.Client/Shared/ProductList.razor
@@ -19,7 +19,7 @@ else
 					</a>
 					<p>@product.Description</p>
 					<h5 class="price">
-						$
+						@GetPriceText(product)
 					</h5>
 				</div>
 			</li>
