--- a/Hollox.BlazorEcommerce.Client/Pages/ProductDetails.razor
+++ b/Hollox.BlazorEcommerce.Client/Pages/ProductDetails.razor
@@ -13,13 +13,13 @@ else
 		<div class="media-body">
 			<h2 class="mb-0">@Product.Title</h2>
 			<p>@Product.Description</p>
-			<select class="form-control" @bind="CurrentTypeId">
+			<select class="form-control" @onchange="OnProductVariantChange">
 				@foreach (var variant in Product.Variants)
 				{
 					<option value=@variant.ProductTypeId>@variant.ProductType.Name</option>
 				}
 			</select>
-			<h4 class="price">@CurrentTypeId</h4>
+			<h4 class="price">@SelectedVariant?.Price</h4>
 		</div>
 	</div>
 }
