chore: split front-end and back-end on seperate solution

--- a/Hollox.BlazorEcommerce.Client/Pages/FetchData.razor
+++ b/Hollox.BlazorEcommerce.Client/Pages/FetchData.razor
@@ -1,4 +1,5 @@
 ﻿@page "/fetchdata"
+@using Hollox.BlazorEcommerce.Shared.Models
 @inject HttpClient Http
 
 <PageTitle>Weather forecast</PageTitle>
